--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-	<h1>Update User</h1><br/>
+	<h1>Loggin</h1><br/>
 	<div class="shadow p-3 mb-5 bg-body rounded">
 
 		<form method="POST">
