--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,17 +6,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-      
-            
-
+        <li class="nav-item">
+          <a class="nav-link" href = "{{ url_for('login')}}">Loggin</a>
+        </li>
+      </ul>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('add_user') }}">Add User</a>
         </li>
       </ul>
 
       <li class="nav-item">
-        <a class="nav-link" >Delete User</a>
+        <a class="nav-link" href = "{{ url_for('delete')}}">Delete User</a>
       </li>
     </ul>
       <form class="d-flex" role="search">
