--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
     <br>
     <h1>Quiz Time!</h1>
-    
-
+    <br>
+    {{ score }}
  
     <div class="container">
         <form method="POST">
