--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
  
     <div class="container">
         <form method="POST">
+            <input type="hidden" name="answer" value="123">
             <!-- Εμφάνιση της ερώτησης -->
             <div class="form-group">
                 <label>{{ question.question_text }}</label>
@@ -15,19 +16,19 @@
             <!-- Εμφάνιση των απαντήσεων ως radio buttons με το Bootstrap -->
             <div class="form-group">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="option_A" name="answer" value="A" required>
+                    <input class="form-check-input" type="radio" id="x" name="answer" value="{{ question.option_A }}" required>
                     <label class="form-check-label" for="option_A">{{ question.option_A }}</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="option_B" name="answer" value="B" required>
+                    <input class="form-check-input" type="radio" id="x" name="answer" value="{{ question.option_B }}" required>
                     <label class="form-check-label" for="option_B">{{ question.option_B }}</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="option_C" name="answer" value="C" required>
+                    <input class="form-check-input" type="radio" id="x" name="answer" value="{{ question.option_C }}" required>
                     <label class="form-check-label" for="option_C">{{ question.option_C }}</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="option_D" name="answer" value="D" required>
+                    <input class="form-check-input" type="radio" id="x" name="answer" value="{{question.option_D}}" required>
                     <label class="form-check-label" for="option_D">{{ question.option_D }}</label>
                 </div>
             </div>
